--- a/src/app/components/about/about.styles.scss
+++ b/src/app/components/about/about.styles.scss
@@ -2,7 +2,8 @@
   width: 100%;
   background: #393F5A;
   background-image: url(about_parts.svg);
-  background-position: 0 250px;
+  background-position: 0 350px;
+  position: relative;
 
   &__triangle {
     background-image: linear-gradient(to left bottom, #393F5A 0%, #393F5A 50%, transparent 50%);
@@ -16,6 +17,10 @@
       width: 100%;
       height: 300px;
       position: absolute;
+
+      @include tablet {
+        height: calc(100vw / 3);
+      }
     }
   }
 
@@ -59,7 +64,7 @@
 
   &__gradient {
     background: linear-gradient(180deg, #202742 0%, #393F5A 100%);
-    min-height: 250px;
+    min-height: 350px;
   }
 
   &__separator {
@@ -78,8 +83,23 @@
     img {
       max-width: 200px;
 
+      transform: scale(0.5);
+      transition: transform 0.25s, opacity 0.25s;
+      opacity: .25;
+
       @include tablet {
         max-width: 200px;
+      }
+    }
+
+    &.active {
+      img {
+        transform: scale(1);
+        opacity: 1;
+      }
+
+      .about__heading {
+        opacity: 1;
       }
     }
   }
@@ -90,6 +110,9 @@
     text-align: center;
     color: #FFFFFF;
     margin: 30px 0 0;
+
+    opacity: 1;
+    transition: opacity .25s;
 
     &--small {
       font-weight: 700;
