--- a/src/app/components/header/logo/logo.styles.scss
+++ b/src/app/components/header/logo/logo.styles.scss
@@ -3,17 +3,21 @@
     display: flex;
     align-items: center;
     width: 200px;
-    // max-width: 370px;
-    // min-width: 270px;
 
     @include tablet {
       padding: 0;
-      min-height: 70px;
-      min-width: initial;
+    }
+    
+    @include mobile {
+      width: 170px;
     }
 
     img {
       height: 80px;
+    }
+
+    svg {
+      width: 100%;
     }
   }
 }
