--- a/src/app/components/welcome/welcome.styles.scss
+++ b/src/app/components/welcome/welcome.styles.scss
@@ -8,9 +8,10 @@
     margin: 0 auto;
     position: relative;
     max-width: 1260px;
-    margin-top: 20px;
+    margin-top: 50px;
     width: calc(100% - 60px);
     padding: 0 30px;
+    justify-content: space-between;
 
     @include tablet {
       width: calc(100% - 40px);
@@ -23,7 +24,7 @@
   &__heading {
     font-weight: 700;
     font-size: 48px;
-    line-height: 48px;
+    line-height: 56px;
     color: #FFFFFF;
     margin: 0;
 
@@ -42,7 +43,7 @@
 
     @include tablet {
       font-size: 36px;
-      line-height: 36px;
+      line-height: 40px;
       text-align: center;
     }
 
@@ -51,7 +52,7 @@
   }
 
   &__content {
-    width: 40%;
+    width: 35%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,6 +64,7 @@
 
   &__notebook {
     width: 60%;
+    max-width: 730px;
 
     @include tablet {
       width: 100%;
@@ -82,7 +84,7 @@
     font-size: 18px;
     line-height: 24px;
     color: #B9B9B9;
-    margin: 30px 0;
+    margin: 20px 0;
 
     @include tablet {
       font-size: 16px;
