--- a/src/app/components/partners/partners.styles.scss
+++ b/src/app/components/partners/partners.styles.scss
@@ -39,6 +39,29 @@
     height: 100%;
   }
 
+  &__button {
+    background: linear-gradient(93.74deg, #09BECA -12.52%, #9A68F3 125.6%);
+    border-radius: 10px;
+    border: 0;
+    padding: 12px 0;
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 700;
+    color: white;
+    cursor: pointer;
+    width: 100%;
+    max-width: 165px;
+    padding: 16px 0 10px;
+    height: 50px;
+    user-select: none;
+
+    @include tablet {
+      margin-top: 30px;
+      font-size: 18px;
+      padding: 14px 0 10px;
+    }
+  }
+
   &__logo {
     background: #3A405A;
     border-radius: 10px;
@@ -105,6 +128,12 @@
   &__logos {
     @include tablet {
       order: 0;
+
+      width: calc(100vw - 40px);
+      left: -20px;
+      position: relative;
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 
