--- a/src/app/components/roadmap/roadmap.styles.scss
+++ b/src/app/components/roadmap/roadmap.styles.scss
@@ -2,6 +2,7 @@
   background: linear-gradient(167.23deg, #665DDD 0%, #B878F2 21.35%, #9DA4EE 43.23%, #89C4EB 63.54%, #7CBBEB 82.81%, #4296EB 100%);
   width: 100%;
   height: max-content;
+  z-index: 2;
 
   &__divider {
     height: 2px;
@@ -42,13 +43,13 @@
     color: #FFFFFF;
     max-width: 500px;
     margin: 0;
-    opacity: .25;
-    transition: opacity .6s cubic-bezier(0.16, 1, 0.3, 1),transform .6s cubic-bezier(0.16, 1, 0.3, 1);
-    transform: translateX(-15px);
+    // opacity: .25;
+    // transition: opacity 1s cubic-bezier(0.16, 1, 0.3, 1),transform 1s cubic-bezier(0.16, 1, 0.3, 1);
+    // transform: translateX(-15px);
 
     &.active {
-      transform: translateX(0);
-      opacity: 1;
+      // transform: translateX(0);
+      // opacity: 1;
     }
 
     @include tablet {
@@ -93,7 +94,7 @@
     margin: 0;
     
     opacity: 0;
-    transition: opacity .6s cubic-bezier(0.16, 1, 0.3, 1),transform .6s cubic-bezier(0.16, 1, 0.3, 1);
+    transition: opacity 1s cubic-bezier(0.16, 1, 0.3, 1),transform 1s cubic-bezier(0.16, 1, 0.3, 1);
     transform: translateX(-15px);
 
     @include tablet {
@@ -150,7 +151,7 @@
       margin-left: auto;
       padding-left: 50px;
 
-      transition: transform .6s cubic-bezier(0.16, 1, 0.3, 1);
+      transition: transform 1s cubic-bezier(0.16, 1, 0.3, 1);
       transform: translateX(25%);
 
       @include tablet {
