--- a/src/app/components/partners/partners.styles.scss
+++ b/src/app/components/partners/partners.styles.scss
@@ -70,7 +70,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all .25s;
+    transition: all 1s;
 
     @include tablet {
       display: inline-block;
