--- a/src/app/components/welcome/welcome.styles.scss
+++ b/src/app/components/welcome/welcome.styles.scss
@@ -65,6 +65,7 @@
   &__notebook {
     width: 60%;
     max-width: 730px;
+    position: relative;
 
     @include tablet {
       width: 100%;
@@ -73,6 +74,17 @@
 
     img {
       width: 100%;
+      position: relative;
+      z-index: 1;
+
+      & + img {
+        top: -90%;
+        left: -20px;
+        width: 100vw;
+        height: auto;
+        position: absolute;
+        z-index: 0;
+      }
     }
 
     // img + img {
