--- a/src/app/components/header/mobile-menu/mobile-menu.styles.scss
+++ b/src/app/components/header/mobile-menu/mobile-menu.styles.scss
@@ -5,7 +5,7 @@
   &__wrapper {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: calc(100% - 100px);
   }
 
   &__buttons {
