--- a/src/app/components/header/mobile-menu/mobile-menu.styles.scss
+++ b/src/app/components/header/mobile-menu/mobile-menu.styles.scss
@@ -90,7 +90,7 @@
     
     background: $body-background-color;
     width: 100%;
-    height: calc(100vh - 100px);
+    height: calc(100% - 100px);
     position: absolute;
     top: 0;
     left: 0;
