--- a/src/app/components/roadmap/roadmap.styles.scss
+++ b/src/app/components/roadmap/roadmap.styles.scss
@@ -125,13 +125,10 @@
 
       .roadmap__item-image {
         transform: translateX(0);
+        opacity: 1;
 
         @include tablet {
           transform: scale(1);
-        }
-
-        img {
-          opacity: 1;
         }
       }
     }
@@ -151,8 +148,9 @@
       margin-left: auto;
       padding-left: 50px;
 
-      transition: transform 1s cubic-bezier(0.16, 1, 0.3, 1);
+      transition: opacity 1s cubic-bezier(0.16, 1, 0.3, 1),transform 1s cubic-bezier(0.16, 1, 0.3, 1);
       transform: translateX(25%);
+      opacity: .25;
 
       @include tablet {
         margin: 0;
@@ -164,8 +162,6 @@
       img {
         position: relative;
         width: 100%;
-
-        opacity: 0.25;
       }
     }
 
