--- a/src/app/components/partners/partners.styles.scss
+++ b/src/app/components/partners/partners.styles.scss
@@ -54,6 +54,7 @@
     padding: 16px 0 10px;
     height: 50px;
     user-select: none;
+    margin-top: 30px;
 
     @include tablet {
       margin-top: 30px;
