--- a/src/app/components/header/menu/menu.styles.scss
+++ b/src/app/components/header/menu/menu.styles.scss
@@ -43,8 +43,13 @@
       padding: 0 25px;
       height: 100%;
       display: block;
-      width: calc(100% - 20px);
       line-height: 100px;
+
+      width: max-content;
+
+      @include tablet {
+        width: calc(100% - 20px);
+      }
 
       &:hover,
       &:focus {
