--- a/src/app/components/roadmap/roadmap.styles.scss
+++ b/src/app/components/roadmap/roadmap.styles.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: max-content;
   z-index: 2;
+  position: relative;
 
   &__divider {
     height: 2px;
@@ -11,13 +12,14 @@
     z-index: 5;
     background: -webkit-linear-gradient(left, #19D6E2, #9960FF);
     bottom: -8px;
+    max-width: 400px;
   }
 
   &__content {
     position: relative;
     max-width: 1260px;
     padding: 0 30px 50px 180px;
-    margin: 300px auto 0;
+    margin: 400px auto 0;
 
     @include tablet {
       padding: 0 30px 50px;
@@ -150,7 +152,6 @@
       margin-left: auto;
       padding-left: 50px;
 
-      overflow: hidden;
       position: relative;
       left: 30px;
 
@@ -269,10 +270,23 @@
 
   .more-arrow {
     display: block;
-    right: -14px;
-    top: 7px;
+    right: -20px;
+    top: 15px;
     position: absolute;
     width: 8px;
     left: initial;
+  }
+
+  .kek {
+    position: absolute;
+    width: 100%;
+    background-image: linear-gradient(#202742, #464C66);
+    height: 25vw;
+    clip-path: polygon(0 0, 100% 0, 100% 100%);
+    top: -1px;
+
+    @include tablet {
+      height: 100px;
+    }
   }
 }
