--- a/src/app/components/phases/phases.styles.scss
+++ b/src/app/components/phases/phases.styles.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 50px 0;
+  padding: 50px 0 80px;
   background: #393F5A;
 
   @include tablet {
