--- a/src/app/components/carousel/carousel.styles.scss
+++ b/src/app/components/carousel/carousel.styles.scss
@@ -44,6 +44,10 @@
     width: calc(100% - 60px);
     padding: 0 30px 20px;
 
+    & > svg {
+      margin: 0 auto;
+    }
+
     @include tablet {
       width: calc(100% - 40px);
       padding: 0 20px 50px;
@@ -64,8 +68,8 @@
     font-size: 50px;
     line-height: 55px;
     color: #FFFFFF;
-    margin: 30px 0 0px;
     text-align: center;
+    margin: 16px 0 0;
 
     &-small {
       font-weight: 700;
