--- a/src/app/components/roadmap/roadmap.styles.scss
+++ b/src/app/components/roadmap/roadmap.styles.scss
@@ -159,9 +159,10 @@
         margin: 0;
         padding: 0;
         max-width: initial;
-        transform: scale(.75);
+        transform: scale(1);
         overflow: initial;
         left: initial;
+        margin-top: 40px;
       }
 
       img {
