--- a/src/app/components/faq/faq.styles.scss
+++ b/src/app/components/faq/faq.styles.scss
@@ -21,7 +21,7 @@
     line-height: 55px;
     color: #FFFFFF;
     max-width: 400px;
-    margin: 30px auto;
+    margin: 20px auto 30px;
     text-align: center;
 
     @include tablet {
