--- a/src/app/components/faq/faq.styles.scss
+++ b/src/app/components/faq/faq.styles.scss
@@ -64,7 +64,7 @@
         justify-content: space-between;
 
         @include mobile {
-          padding: 20px 60px 20px 40px;
+          padding: 20px;
         }
 
         &:-webkit-direct-focus {
@@ -85,6 +85,7 @@
           }
           transition: all .25s ease;
           transform: rotate(0deg);
+          padding-left: 20px;
         }
 
         // &::after {
