--- a/src/app/components/welcome/welcome.styles.scss
+++ b/src/app/components/welcome/welcome.styles.scss
@@ -77,11 +77,21 @@
       position: relative;
       z-index: 2001;
 
+      transition: opacity 1s cubic-bezier(0.16, 1, 0.3, 1),transform 1s cubic-bezier(0.16, 1, 0.3, 1);
+      opacity: 0;
+
+      &.active {
+        opacity: 1;
+      }
+
       @include tablet {
         z-index: 2;
       }
 
       & + img {
+        opacity: 1;
+        transform: initial;
+        transition: initial;
         top: -50%;
         left: -30%;
         width: 150%;
