--- a/src/app/components/faq/faq.styles.scss
+++ b/src/app/components/faq/faq.styles.scss
@@ -62,6 +62,8 @@
         position: relative;
         display: flex;
         justify-content: space-between;
+        flex-wrap: nowrap;
+        flex-direction: row;
 
         @include mobile {
           padding: 20px;
@@ -85,7 +87,7 @@
           }
           transition: all .25s ease;
           transform: rotate(0deg);
-          padding-left: 20px;
+          margin-left: 20px;
         }
 
         // &::after {
