--- a/src/app/components/faq/faq.styles.scss
+++ b/src/app/components/faq/faq.styles.scss
@@ -66,7 +66,7 @@
         flex-direction: row;
 
         @include mobile {
-          padding: 20px;
+          padding: 20px 60px 20px;
         }
 
         &:-webkit-direct-focus {
@@ -88,6 +88,8 @@
           transition: all .25s ease;
           transform: rotate(0deg);
           margin-left: 20px;
+          position: absolute;
+          right: 20px;
         }
 
         // &::after {
