--- a/src/app/components/phases/phases.styles.scss
+++ b/src/app/components/phases/phases.styles.scss
@@ -38,6 +38,8 @@
       font-size: 36px;
       line-height: 42px;
       margin: 0 auto 30px 0;
+      text-align: center;
+      margin: 0 auto 30px;
     }
 
     &--small {
