--- a/src/app/components/footer/footer.styles.scss
+++ b/src/app/components/footer/footer.styles.scss
@@ -153,6 +153,7 @@
     margin-top: 20px;
     display: flex;
     width: 100%;
+    justify-content: center;
     &-heading {
       font-weight: 800;
       font-size: 32px;
