--- a/src/app/components/footer/footer.styles.scss
+++ b/src/app/components/footer/footer.styles.scss
@@ -192,7 +192,7 @@
     padding: 0;
 
     svg {
-      width: 100%;
+      width: 40px;
       height: 100%;
       max-width: 40px;
       height: 40px;
