--- a/src/app/components/footer/footer.styles.scss
+++ b/src/app/components/footer/footer.styles.scss
@@ -176,13 +176,13 @@
   .social-wrapper {
     display: flex;
     margin: 0;
-    justify-content: space-between;
+    justify-content: space-around;
     max-width: initial;
     height: 50px;
     margin: 30px 0;
 
     @include tablet {
-      height: 30px;
+      height: 40px;
       max-width: 280px;
       margin: 30px 0;
     }
