--- a/src/app/components/faq/faq.styles.scss
+++ b/src/app/components/faq/faq.styles.scss
@@ -81,7 +81,8 @@
     }
 
     &-item {
-
+      -webkit-tap-highlight-color: transparent;
+      border-radius: 14px;
       
       summary {
         font-size: 20px;
@@ -90,15 +91,17 @@
         position: relative;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         flex-wrap: nowrap;
         flex-direction: row;
+        width: calc(100% - 40px);
 
         &:focus{
           outline: none;
         }
 
         @include mobile {
-          padding: 20px 60px 20px 20px;
+          padding: 20px 20px 20px 20px;
         }
 
         &:-webkit-direct-focus {
@@ -117,11 +120,13 @@
           path {
             transition: all .25s ease;
           }
+          min-width: 20px;
           transition: all .25s ease;
           transform: rotate(0deg);
           margin-left: 20px;
-          position: absolute;
-          right: 20px;
+          position: relative;
+          // position: absolute;
+          // right: 20px;
         }
 
         // &::after {
