--- a/src/app/components/header/mobile-menu/mobile-menu.styles.scss
+++ b/src/app/components/header/mobile-menu/mobile-menu.styles.scss
@@ -47,6 +47,7 @@
     z-index: 101;
     display: block;
     padding: 32px 20px 32px 30px;
+    -webkit-tap-highlight-color: transparent;
   }
   
   .bar1, .bar2, .bar3 {
