--- a/src/app/components/roadmap/roadmap.styles.scss
+++ b/src/app/components/roadmap/roadmap.styles.scss
@@ -292,6 +292,7 @@
   }
 
   .kek {
+    z-index: 1;
     position: absolute;
     width: 100%;
     background-image: linear-gradient(#202742, #464C66);
