--- a/src/app/components/carousel/carousel.styles.scss
+++ b/src/app/components/carousel/carousel.styles.scss
@@ -20,11 +20,11 @@
 
   &__img {
     order: 2;
-    width: 55%;
+    width: 35%;
 
     @include tablet {
       order: 0;
-      width: 100%;
+      width: 80%;
       height: auto;
     }
   }
@@ -58,9 +58,11 @@
   &__item {
     display: flex;
     padding: 0;
+    justify-content: center;
 
     @include tablet {
       flex-direction: column;
+      align-items: center;
     }
   }
 
