--- a/src/app/components/partners/partners.styles.scss
+++ b/src/app/components/partners/partners.styles.scss
@@ -10,6 +10,35 @@
   @include tablet {
   }
 
+  &__name {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 33px;
+    /* identical to box height */
+
+    text-align: center;
+
+    color: #EFEFEF;
+    margin: 10px 0 0;
+  }
+
+  &__mob {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    max-width: 600px;
+
+    & > .partners__logo {
+      &:first-of-type {
+        margin-right: 10px;
+      }
+    }
+
+    & + & {
+      margin-top: 10px;
+    }
+  }
+
   &__features {
     display: flex;
     flex-wrap: wrap;
@@ -46,11 +75,10 @@
     justify-content: end;
 
     @include tablet {
-      overflow-x: scroll;
-      overflow-y: hidden;
-      white-space: nowrap;
-      display: initial;
-      margin: 30px 0;
+      margin: 30px 0 40px;
+      flex-direction: column;
+      align-items: center;
+      gap: 0;
 
       -ms-overflow-style: none; /* for Internet Explorer, Edge */
       scrollbar-width: none; /* for Firefox */
@@ -66,6 +94,26 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    flex-direction: column;
+
+    @include tablet {
+      flex-direction: row;
+    }
+
+    svg {
+      width: 65px;
+      height: auto;
+
+      @include tablet {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
+  &__hidden {
+    opacity: 0;
+    transition: opacity .25s;
   }
 
   &__button {
@@ -104,13 +152,14 @@
 
     @include tablet {
       display: inline-block;
-      height: 180px;
-      width: auto;
-      padding: 20px;
-      min-width: 180px;
+      width: 100%;
+      padding: 50px;
+      height: auto;
+      max-height: 120px;
+      max-width: 120px;
 
       &:not(:last-of-type) {
-        margin-right: 10px;
+        // margin-right: 10px;
       }
 
       svg {
@@ -152,13 +201,9 @@
 
   &__logos {
     @include tablet {
-      order: 0;
-
-      width: calc(100vw - 40px);
-      left: -20px;
-      position: relative;
-      padding-left: 20px;
-      padding-right: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
     }
   }
 
