--- a/src/app/components/partners/partners.styles.scss
+++ b/src/app/components/partners/partners.styles.scss
@@ -75,7 +75,7 @@
     justify-content: end;
 
     @include tablet {
-      margin: 30px 0 40px;
+      margin: 30px 0 30px;
       flex-direction: column;
       align-items: center;
       gap: 0;
@@ -98,6 +98,7 @@
 
     @include tablet {
       flex-direction: row;
+      height: auto;
     }
 
     svg {
@@ -249,6 +250,7 @@
 
     @include tablet {
       font-size: 16px;
+      margin: 10px 0;
       line-height: 24px;
     }
 
