--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -6,6 +6,7 @@ body {
   font-family: $font, sans-serif;
   background: $body-background-color;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 input,
